fix issue where product images get stretched

--- a/stylesheets/product.css
+++ b/stylesheets/product.css
@@ -37,5 +37,7 @@
 
 .productImage {
     border-radius: 32px;
+    width: fit-content;
+    height: fit-content;
     background-color: #0d21a117;
 }
